--- a/fbsub-example/views/account.jade
+++ b/fbsub-example/views/account.jade
@@ -6,7 +6,7 @@ html
 		link(src="/css/bootstrap.min.css", rel='stylesheet', media='screen')
 	body
 		.container
-			h1=user is logged in
+			h1!{user} you is logged in
 			p.lead Say something worthwhile here
 			a(href="/") Go home
 			br
